--- a/src/html/news.html
+++ b/src/html/news.html
@@ -28,8 +28,7 @@
       </div>
       <div class="col headline">
         <div class="mySlideDiv fade active">
-          <h1>Check recently RCSB released data</h1>
-          <h3>Update Date : 2023.05.04</h3>
+          <h1>Update Date : 2023.05.04</h1>
           <div class="row recently-rcsb"></div>
         </div>
         <div class="mySlideDiv fade">
@@ -235,31 +234,22 @@
                   <td>7T96</td>
                 </tr>
                 <tr>
-                  <td>P09471
-                  </td>
-                  <td>GNAO1
-                  </td>
+                  <td>P09471</td>
+                  <td>GNAO1</td>
                   <td></td>
-                  <td>7T96
-                  </td>
+                  <td>7T96</td>
                 </tr>
                 <tr>
-                  <td>P62873
-                  </td>
-                  <td>GNB1
-                  </td>
+                  <td>P62873</td>
+                  <td>GNB1</td>
                   <td></td>
-                  <td>7T96
-                  </td>
+                  <td>7T96</td>
                 </tr>
                 <tr>
-                  <td>P59768
-                  </td>
-                  <td>GNG2
-                  </td>
+                  <td>P59768</td>
+                  <td>GNG2</td>
                   <td></td>
-                  <td>7T96
-                  </td>
+                  <td>7T96</td>
                 </tr>
                 <!-- sample data -->
               </tbody>
@@ -285,14 +275,380 @@
               <a class="canvasnext">&#10095;</a>
             </div>
           </div>
-          <div class="right-2"></div>
+          <div class="right-2">
+            <div class="row search-wrapper">
+              <div class="search">
+                <input type="text">
+                <button>search</button>
+              </div>
+            </div>
+            <div class="list-wrapper">
+              <table>
+                <thead class="table-head-2">
+                  <tr class="row">
+                    <th>Entry ID</th>
+                    <th>Gene Name</th>
+                    <th>Target Protein</th>
+                    <th>Uniprot ID</th>
+                    <th>Ligand Formula</th>
+                    <th>Ligand MW</th>
+                    <th>Ligand ID</th>
+                  </tr>
+                </thead>
+              </table>
+              <div class="table-body-2">
+                <table>
+                  <tbody>
+                    <tr>
+                      <td>7N4O</td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td>mutant</td>
+                      <td>P47929</td>
+                      <td>C2 H6 O2</td>
+                      <td>62.068</td>
+                      <td>EDO</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td></td>
+                      <td>P47929</td>
+                      <td>C3 H8 O3</td>
+                      <td>92.094</td>
+                      <td>GOL</td>
+                    </tr>
+                    <tr>
+                      <td>7N57</td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td>mutant</td>
+                      <td>P47929</td>
+                      <td>C3 H8 O3</td>
+                      <td>92.094</td>
+                      <td>GOL</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C2 H6 O2</td>
+                      <td>62.068</td>
+                      <td>EDO</td>
+                    </tr>
+                    <tr>
+                      <td>7N6C</td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td>mutant</td>
+                      <td>P47929</td>
+                      <td>C3 H8 O3</td>
+                      <td>92.094</td>
+                      <td>GOL</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C4 H12 N O3</td>
+                      <td>122.143</td>
+                      <td>TRS</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C2 H6 O2</td>
+                      <td>62.068</td>
+                      <td>EDO</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C4 H10 O3</td>
+                      <td>106.12</td>
+                      <td>PEG</td>
+                    </tr>
+                    <!-- <tr> 
+                      <td>7N8D</td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td>mutant</td>
+                      <td>P47929</td>
+                      <td>C2 H6 O2</td>
+                      <td>62.068</td>
+                      <td>EDO</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td></td>
+                      <td>P47929</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td>7N8G</td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td>mutant</td>
+                      <td>P47929</td>
+                      <td>C2 H6 O2</td>
+                      <td>62.068</td>
+                      <td>EDO</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C4 H12 N O3</td>
+                      <td>122.143</td>
+                      <td>TRS</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C3 H8 O3</td>
+                      <td>92.094</td>
+                      <td>GOL</td>
+                    </tr>
+                    <tr>
+                      <td>7N96</td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td>mutant</td>
+                      <td>P47929</td>
+                      <td>C3 H8 O3</td>
+                      <td>92.094</td>
+                      <td>GOL</td>
+                    </tr>
+                    <tr>
+                      <td>7QQD</td>
+                      <td>NFIX</td>
+                      <td></td>
+                      <td>Q14938</td>
+                      <td>Zn</td>
+                      <td>65.409</td>
+                      <td>ZN</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C8 H18 N2 O4 S</td>
+                      <td>238.305</td>
+                      <td>EPE</td>
+                    </tr>
+                    <tr>
+                      <td>7QQE</td>
+                      <td>NFIX</td>
+                      <td></td>
+                      <td>Q14938</td>
+                      <td>Zn</td>
+                      <td>65.409</td>
+                      <td>ZN</td>
+                    </tr>
+                    <tr>
+                      <td>7QU4</td>
+                      <td>HBG2</td>
+                      <td>mutant</td>
+                      <td>P69892</td>
+                      <td>C34 H32 Fe N4 O4</td>
+                      <td>616.487</td>
+                      <td>HEM</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td>HBA1, HBA2</td>
+                      <td></td>
+                      <td>P69905</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td>7QUI</td>
+                      <td>SIGLEC8, SAF2</td>
+                      <td>mutant</td>
+                      <td>Q9NYZ4</td>
+                      <td>C35 H49 N3 O23 S2</td>
+                      <td>943.9</td>
+                      <td>F9I</td>
+                    </tr>
+                    <tr>
+                      <td>7RB3</td>
+                      <td>NAA35, EGAP, MAK10</td>
+                      <td></td>
+                      <td>Q5VZE5</td>
+                      <td>C23 H38 N7 O18 P3 S</td>
+                      <td>825.57</td>
+                      <td>CMC</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td>NAA30, C14orf35, MAK3, NAT12</td>
+                      <td></td>
+                      <td>Q147X3</td>
+                      <td>C5 H11 N O2 S</td>
+                      <td>149.211</td>
+                      <td>MET</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C6 H13 N O2</td>
+                      <td>131.173</td>
+                      <td>LEU</td>
+                    </tr>
+                    <tr>
+                      <td>7RDG</td>
+                      <td>LGALS7, PIG1, LGALS7B</td>
+                      <td>mutant</td>
+                      <td>P47929</td>
+                      <td>C2 H6 O2</td>
+                      <td>62.068</td>
+                      <td>EDO</td>
+                    </tr>
+                    <tr>
+                      <td>7SZA</td>
+                      <td>TP53RK, C20orf64, PRPK</td>
+                      <td></td>
+                      <td>Q96S44</td>
+                      <td>C13 H11 N3 O4</td>
+                      <td>273.244</td>
+                      <td>DUI</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td>TPRKB, CGI-121, My019</td>
+                      <td></td>
+                      <td>Q9Y3C4</td>
+                      <td>C6 H5 O7</td>
+                      <td>189.1</td>
+                      <td>FLC</td>
+                    </tr>
+                    <tr>
+                      <td>7SZB</td>
+                      <td>TP53RK, C20orf64, PRPK</td>
+                      <td></td>
+                      <td>Q96S44</td>
+                      <td>C13 H11 N3 O4</td>
+                      <td>273.244</td>
+                      <td>DQ4</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td>TPRKB, CGI-121, My019</td>
+                      <td></td>
+                      <td>Q9Y3C4</td>
+                      <td>C6 H5 O7</td>
+                      <td>189.1</td>
+                      <td>FLC</td>
+                    </tr>
+                    <tr>
+                      <td>7T86</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C8 H15 N O6</td>
+                      <td>221.208</td>
+                      <td>NAG</td>
+                    </tr>
+                    <tr>
+                      <td>7TAI</td>
+                      <td>STEAP2, PCANAP1, STAMP1, UNQ6507/PRO23203</td>
+                      <td>Q8NFT2</td>
+                      <td>C27 H33 N9 O15 P2</td>
+                      <td>785.55</td>
+                      <td>FAD</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C34 H32 Fe N4 O4</td>
+                      <td>616.487</td>
+                      <td>HEM</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C21 H28 N7 O17 P3</td>
+                      <td>743.405</td>
+                      <td>NAP</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C42 H82 N O8 P</td>
+                      <td>760.076</td>
+                      <td>LBN</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>C27 H46 O</td>
+                      <td>386.654</td>
+                      <td>CLR</td>
+                    </tr>
+                    <tr>
+                      <td>7TCY</td>
+                      <td>TNK1</td>
+                      <td>mutant</td>
+                      <td>Q13470</td>
+                      <td>C H2 O2</td>
+                      <td>46.025</td>
+                      <td>FMT</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>O4 P</td>
+                      <td>94.971</td>
+                      <td>PO4</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>Mg</td>
+                      <td>24.305</td>
+                      <td>MG</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>Cl</td>
+                      <td>35.453</td>
+                      <td>CL</td>
+                    </tr>-->
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer">
-        <p>
-          © 2023 Syntekabio, Inc. All rights reserved. <br />
-          이메일무단수집거부 | 개인정보취급방침
-        </p>
+        <p>© 2023 Syntekabio, Inc. All rights reserved. <br /></p>
       </div>
     </div>
   </body>
