--- a/src/html/news_scroll.html
+++ b/src/html/news_scroll.html
@@ -6,53 +6,397 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/news_scroll.css" />
+    <!-- Font -->
   </head>
   <body>
     <div class="container">
       <div class="row navigator">
-        <img src="../../img/STB_logo.png" alt="">
+        <img src="../../img/STB_logo_white.png" alt="" />
         <div class="title">
-            <h1>RCSB Released Data</h1>
+          <!-- <h1>Model of DeepMatcher</h1> -->
         </div>
         <div class="observer">
-            <a href="./index.html">Model of DeepMatcher</a>
+          <p>≡</p>
         </div>
       </div>
       <div class="section">
-        <div class="col headline">
-            <div class="mySlideDiv fade active">
-              <h1>Update Date : 2023.05.04</h1>
-              <div class="row recently-rcsb"></div>
-            </div>
-            <div class="mySlideDiv fade">
-              <h1>Key Target Protein</h1>
-            </div>
-            <div class="mySlideDiv fade">
-              <h1>Syntekabio</h1>
-              <h3>AI Drug Development & Discovery</h3>
-            </div>
-            <div class="mySlideDiv fade">
-              <h1>Last 7 days Homo sapiens Protein Structure</h1>
-              <h3>
-                <a
-                  href="https://www.rcsb.org/search?request=%7B%22query%22%3A%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22terminal%22%2C%22service%22%3A%22text%22%2C%22parameters%22%3A%7B%22attribute%22%3A%22rcsb_accession_info.initial_release_date%22%2C%22operator%22%3A%22range%22%2C%22value%22%3A%7B%22from%22%3A%22now-1w%22%2C%22include_lower%22%3Afalse%2C%22to%22%3A%22now%22%2C%22include_upper%22%3Atrue%7D%7D%7D%5D%2C%22logical_operator%22%3A%22and%22%7D%5D%2C%22logical_operator%22%3A%22and%22%2C%22label%22%3A%22text%22%7D%5D%2C%22logical_operator%22%3A%22and%22%7D%2C%22return_type%22%3A%22entry%22%2C%22request_options%22%3A%7B%22paginate%22%3A%7B%22start%22%3A0%2C%22rows%22%3A25%7D%2C%22results_content_type%22%3A%5B%22experimental%22%5D%2C%22sort%22%3A%5B%7B%22sort_by%22%3A%22score%22%2C%22direction%22%3A%22desc%22%7D%5D%2C%22scoring_strategy%22%3A%22combined%22%7D%2C%22request_info%22%3A%7B%22query_id%22%3A%22977c3429d9b3b7e7c3101379fd9c8604%22%7D%7D"
-                  target="_blank"
-                  >Go to RCSB Page</a
-                >
-              </h3>
-            </div>
-    
-            <a class="prev" onclick="prevSlide()">&#10094;</a>
-            <a class="next" onclick="nextSlide()">&#10095;</a>
+        <div class="page-1">
+          <video muted autoplay loop>
+            <source
+              src="../../img/connection_-_113367 (1080p).mp4"
+              type="video/mp4"
+            />
+            <strong>Your browser does not support the video tag.</strong>
+          </video>
+          <div class="summary-text">
+            <h1>Model of DeepMatcher</h1>
+            <br />
+            <br />
+            <p>
+              Model of DeepMatcher는 DeepMatcher® 사용에 앞서 타겟 선정 및
+              정보파악을 위한 Local Service 입니다.
+              <br />
+              <br />
+              RCSB, Uniprot 등 Protein Ligand 데이터베이스를 통해 자체 제작한
+              내부 데이터베이스에서
+              <br />
+              1700T, 업데이트 된 Protein Model 및 최근 동향, 실험가부 여부 등을
+              확인하실 수 있습니다.
+              <br />
+              <br />
+            </p>
+            <h2>< DeepMatcher ></h2>
+            <p>
+              Syntekabio의 DeepMatcher®는 인공지능 심층 학습법 (AI Deep
+              Learning) 기반의 Small molecule screening platform 입니다.
+              <br />
+              DeepMatcher는 ZINC Database 의 10억 개 화합물 Database와 ADCTM을
+              이용하여 design 한 유도체,
+              <br />
+              그리고 Syntekabio의 고유 Chemical library를 기반으로, 대상
+              단백질에 대한 binding affinity를 구조적, 화학적으로 예측하여
+              후보물질을 발굴하고
+              <br />
+              이를 <i>in vitro</i> 수준에서 검증하는 것까지 포함하고 있으며,
+              높은 정확도를 통해 합성 신약후보물질 발굴은 물론,
+              <br />
+              바이오 신약 개발 전반, 신약후보 대상단백질 발굴, 약물 재창출 등
+              제약사업 전반에 높은 활용도를 가지고 있습니다.
+            </p>
           </div>
+
+          <div class="headline-wrapper">
+            <div class="col headline">
+              <div class="mySlideDiv fade active">
+                <h1>Update Date : 2023.05.04</h1>
+                <div class="row recently-rcsb"></div>
+              </div>
+              <div class="mySlideDiv fade">
+                <h1>Key Target Protein</h1>
+              </div>
+              <div class="mySlideDiv fade">
+                <h1>Syntekabio</h1>
+                <h3>AI Drug Development & Discovery</h3>
+              </div>
+              <div class="mySlideDiv fade">
+                <h1>Last 7 days Homo sapiens Protein Structure</h1>
+                <h3>
+                  <a
+                    href="https://www.rcsb.org/search?request=%7B%22query%22%3A%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22terminal%22%2C%22service%22%3A%22text%22%2C%22parameters%22%3A%7B%22attribute%22%3A%22rcsb_accession_info.initial_release_date%22%2C%22operator%22%3A%22range%22%2C%22value%22%3A%7B%22from%22%3A%22now-1w%22%2C%22include_lower%22%3Afalse%2C%22to%22%3A%22now%22%2C%22include_upper%22%3Atrue%7D%7D%7D%5D%2C%22logical_operator%22%3A%22and%22%7D%5D%2C%22logical_operator%22%3A%22and%22%2C%22label%22%3A%22text%22%7D%5D%2C%22logical_operator%22%3A%22and%22%7D%2C%22return_type%22%3A%22entry%22%2C%22request_options%22%3A%7B%22paginate%22%3A%7B%22start%22%3A0%2C%22rows%22%3A25%7D%2C%22results_content_type%22%3A%5B%22experimental%22%5D%2C%22sort%22%3A%5B%7B%22sort_by%22%3A%22score%22%2C%22direction%22%3A%22desc%22%7D%5D%2C%22scoring_strategy%22%3A%22combined%22%7D%2C%22request_info%22%3A%7B%22query_id%22%3A%22977c3429d9b3b7e7c3101379fd9c8604%22%7D%7D"
+                    target="_blank"
+                    >Go to RCSB Page</a
+                  >
+                </h3>
+              </div>
+
+              <a class="prev" onclick="prevSlide()">&#10094;</a>
+              <a class="next" onclick="nextSlide()">&#10095;</a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="section">2</div>
-      <div class="section">3</div>
+      <div class="section">
+        <div class="page-2">
+          <div class="col main">
+            <div class="row search-bar">
+              <input type="text" placeholder="Please Enter Uniprot ID" />
+              <button id="search-btn">search</button>
+            </div>
+            <div class="row data-wrapper">
+              <div class="col option-wrapper">
+                <h1>OPTION</h1>
+                <div class="option">
+                  <p>Family</p>
+                  <div class="row box-wrapper">
+                    <h5>K</h5>
+                    <h5>i</h5>
+                    <h5>n</h5>
+                    <h5>a</h5>
+                    <h5>s</h5>
+                    <h5>e</h5>
+                    <input id="FamilyKinase" type="checkbox" />
+                  </div>
+                  <div class="row box-wrapper">
+                    <h5>P</h5>
+                    <h5>e</h5>
+                    <h5>p</h5>
+                    <h5>t</h5>
+                    <h5>i</h5>
+                    <h5>d</h5>
+                    <h5>a</h5>
+                    <h5>s</h5>
+                    <h5>e</h5>
+                    <input id="FamilyPeptidase" type="checkbox" />
+                  </div>
+                  <div class="row box-wrapper">
+                    <h5>O</h5>
+                    <h5>t</h5>
+                    <h5>h</h5>
+                    <h5>e</h5>
+                    <h5>r</h5>
+                    <h5>s</h5>
+                    <input id="FamilyOthers" type="checkbox" />
+                  </div>
+                </div>
+                <div class="option">
+                  <p>Function Mode</p>
+                  <div class="row box-wrapper">
+                    <h5>A</h5>
+                    <h5>g</h5>
+                    <h5>o</h5>
+                    <h5>n</h5>
+                    <h5>i</h5>
+                    <h5>s</h5>
+                    <h5>t</h5>
+                    <input id="FunctionAgonist" type="checkbox" />
+                  </div>
+                  <div class="row box-wrapper">
+                    <h5>A</h5>
+                    <h5>n</h5>
+                    <h5>t</h5>
+                    <h5>a</h5>
+                    <h5>g</h5>
+                    <h5>o</h5>
+                    <h5>n</h5>
+                    <h5>i</h5>
+                    <h5>s</h5>
+                    <h5>t</h5>
+                    <input id="FunctionAntagonist" type="checkbox" />
+                  </div>
+                  <div class="row box-wrapper">
+                    <h5>O</h5>
+                    <h5>t</h5>
+                    <h5>h</h5>
+                    <h5>e</h5>
+                    <h5>r</h5>
+                    <h5>s</h5>
+                    <input id="FunctionOthers" type="checkbox" />
+                  </div>
+                </div>
+                <div class="optoin">
+                  <p>Type</p>
+                  <div class="row box-wrapper">
+                    <h5>w</h5>
+                    <h5>i</h5>
+                    <h5>l</h5>
+                    <h5>d</h5>
+                    <h5></h5>
+                    <h5>t</h5>
+                    <h5>y</h5>
+                    <h5>p</h5>
+                    <h5>e</h5>
+                    <input id="TypeWild" type="checkbox" />
+                  </div>
+                  <div class="row box-wrapper">
+                    <h5>m</h5>
+                    <h5>u</h5>
+                    <h5>t</h5>
+                    <h5>a</h5>
+                    <h5>n</h5>
+                    <h5>t</h5>
+                    <h5></h5>
+                    <h5>t</h5>
+                    <h5>y</h5>
+                    <h5>p</h5>
+                    <h5>e</h5>
+                    <input id="TypeMutant" type="checkbox" />
+                  </div>
+                </div>
+              </div>
+              <div class="row hide">
+                <h5 id="hide">◀ close</h5>
+              </div>
+              <div class="col main-wrapper">
+                <div class="col table-wrapper">
+                  <div class="table-header">
+                    <table>
+                      <thead>
+                        <tr>
+                          <!-- UniProtID,ProteinName,Type,Cluster,ModelPDB,LIG,STBClass,ModelActionMode -->
+                          <th>ID</th>
+                          <th>Uniprot ID</th>
+                          <th>Protein Name</th>
+                          <th>Type</th>
+                          <th>LIG</th>
+                          <th>PDB</th>
+                          <th>Model Action Mode</th>
+                          <th>Family</th>
+                        </tr>
+                      </thead>
+                    </table>
+                  </div>
+                  <div class="table-body">
+                    <table id="data">
+                      <tbody id="data-tbody">
+                        <!-- data -->
+                      </tbody>
+                    </table>
+                  </div>
+                  <!-- <div class="row pagination">
+                    <a href="">Previous</a>
+                    <a href="">1</a>
+                    <a href="">2</a>
+                    <a href="">3</a>
+                    <a href="">4</a>
+                    <a href="">5</a>
+                    <a href="">Next</a>
+                </div> -->
+                </div>
+                <div class="bottom">
+                  <p>
+                    For Web after 1700T model validation project This web was
+                    created to effectively use 1700T model data. <br />
+                    Made for in-house use. It is a demo version before database
+                    construction, so sufficient correction and feedback are
+                    required. <br />
+                    If necessary, we can request the co-work from the AI center
+                    team after completing the demo version.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- popup -->
+          <div class="col data-popup">
+            <div class="popup-loading">
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+            </div>
+            <div class="row popup-header">
+              <div class="popup-title"></div>
+              <div class="popup-close">
+                <img src="../img/exit_grey.png" alt="" />
+              </div>
+            </div>
+            <div class="popup-body">
+              <!-- 
+            UniProtID
+            ProteinName
+            Type
+            LIG
+            PDB
+            ModelActionMode
+            Family
+            Cluster
+            STBCloudClass
+            Replaced
+            NOfTrials
+            AtopicDermatitisPsoriasisAsthma
+            RheumatoidArthritis
+            DiabeticNephropathy
+           -->
+              <h1>Model Information</h1>
+              <div class="row download">
+                <a id="goRCSB" href="" target="_blank"
+                  ><img src="../img/rcsb_logo.png" alt=""
+                /></a>
+                <a id="goUniprot" href="" target="_blank"
+                  ><img src="../img/uniprot_logo.png" alt=""
+                /></a>
+                <a id="getPDB" href="" download="" target="_blank"
+                  >download PDB</a
+                >
+              </div>
+              <div class="row popup-item uniprot-id">
+                <span>Uniprot ID</span>
+                <input id="popUniProtID" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>Protein Name</span>
+                <input id="popProteinName" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>Type</span>
+                <input id="popType" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>LIG</span>
+                <input id="popLIG" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>PDB</span>
+                <input id="popPDB" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>Model Action Mode</span>
+                <input id="popModelActionMode" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>Family</span>
+                <input id="popFamily" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>Cluster</span>
+                <input id="popCluster" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>STBCloudClass</span>
+                <input id="popSTBCloudClass" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>Replaced</span>
+                <input id="popReplaced" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>NOfTrials</span>
+                <input id="popNOfTrials" type="text" value="" readonly />
+              </div>
+              <div class="row popup-item">
+                <span>Atopic Dermatitis Psoriasis Asthma</span>
+                <input
+                  id="popAtopicDermatitisPsoriasisAsthma"
+                  type="text"
+                  value=""
+                  readonly
+                />
+              </div>
+              <div class="row popup-item">
+                <span>Rheumatoid Arthritis</span>
+                <input
+                  id="popRheumatoidArthritis"
+                  type="text"
+                  value=""
+                  readonly
+                />
+              </div>
+              <div class="row popup-item">
+                <span>Diabetic Nephropathy</span>
+                <input
+                  id="popDiabeticNephropathy"
+                  type="text"
+                  value=""
+                  readonly
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="col page-3">
+          <div class="title-3">
+            <h1>RCSB Released Data</h1>
+          </div>
+          <div class="row chart-wrapper">
+            <div class="chart-1-wrapper">
+              <canvas id="chart-1"></canvas>
+            </div>
+            <div class="chart-2-wrapper">
+              <canvas></canvas>
+            </div>
+            <div class="chart-3-wrapper">
+              <canvas></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="section">4</div>
       <div class="section">5</div>
     </div>
   </body>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="../js/news_scroll.js"></script>
   <script></script>
 </html>
