--- a/src/html/news_scroll.html
+++ b/src/html/news_scroll.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/news_scroll.css" />
     <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -45,7 +48,7 @@
               <br />
               <br />
             </p>
-            <h2>< DeepMatcher ></h2>
+            <h2>DeepMatcher</h2>
             <p>
               Syntekabio의 DeepMatcher®는 인공지능 심층 학습법 (AI Deep
               Learning) 기반의 Small molecule screening platform 입니다.
@@ -244,13 +247,7 @@
                 </div>
                 <div class="bottom">
                   <p>
-                    For Web after 1700T model validation project This web was
-                    created to effectively use 1700T model data. <br />
-                    Made for in-house use. It is a demo version before database
-                    construction, so sufficient correction and feedback are
-                    required. <br />
-                    If necessary, we can request the co-work from the AI center
-                    team after completing the demo version.
+                    필요 문구 및 설명 입력 예정
                   </p>
                 </div>
               </div>
