--- a/src/html/news_scroll.html
+++ b/src/html/news_scroll.html
@@ -111,97 +111,41 @@
                 <div class="option">
                   <p>Family</p>
                   <div class="row box-wrapper">
-                    <h5>K</h5>
-                    <h5>i</h5>
-                    <h5>n</h5>
-                    <h5>a</h5>
-                    <h5>s</h5>
-                    <h5>e</h5>
+                    <h5>Kinase</h5>
                     <input id="FamilyKinase" type="checkbox" />
                   </div>
                   <div class="row box-wrapper">
-                    <h5>P</h5>
-                    <h5>e</h5>
-                    <h5>p</h5>
-                    <h5>t</h5>
-                    <h5>i</h5>
-                    <h5>d</h5>
-                    <h5>a</h5>
-                    <h5>s</h5>
-                    <h5>e</h5>
+                    <h5>Pwptidase</h5>
                     <input id="FamilyPeptidase" type="checkbox" />
                   </div>
                   <div class="row box-wrapper">
-                    <h5>O</h5>
-                    <h5>t</h5>
-                    <h5>h</h5>
-                    <h5>e</h5>
-                    <h5>r</h5>
-                    <h5>s</h5>
+                    <h5>Others</h5>
                     <input id="FamilyOthers" type="checkbox" />
                   </div>
                 </div>
                 <div class="option">
                   <p>Function Mode</p>
                   <div class="row box-wrapper">
-                    <h5>A</h5>
-                    <h5>g</h5>
-                    <h5>o</h5>
-                    <h5>n</h5>
-                    <h5>i</h5>
-                    <h5>s</h5>
-                    <h5>t</h5>
+                    <h5>Agonist</h5>
                     <input id="FunctionAgonist" type="checkbox" />
                   </div>
                   <div class="row box-wrapper">
-                    <h5>A</h5>
-                    <h5>n</h5>
-                    <h5>t</h5>
-                    <h5>a</h5>
-                    <h5>g</h5>
-                    <h5>o</h5>
-                    <h5>n</h5>
-                    <h5>i</h5>
-                    <h5>s</h5>
-                    <h5>t</h5>
+                    <h5>Antagonist</h5>
                     <input id="FunctionAntagonist" type="checkbox" />
                   </div>
                   <div class="row box-wrapper">
-                    <h5>O</h5>
-                    <h5>t</h5>
-                    <h5>h</h5>
-                    <h5>e</h5>
-                    <h5>r</h5>
-                    <h5>s</h5>
+                    <h5>Others</h5>
                     <input id="FunctionOthers" type="checkbox" />
                   </div>
                 </div>
                 <div class="optoin">
                   <p>Type</p>
                   <div class="row box-wrapper">
-                    <h5>w</h5>
-                    <h5>i</h5>
-                    <h5>l</h5>
-                    <h5>d</h5>
-                    <h5></h5>
-                    <h5>t</h5>
-                    <h5>y</h5>
-                    <h5>p</h5>
-                    <h5>e</h5>
+                    <h5>wild type</h5>
                     <input id="TypeWild" type="checkbox" />
                   </div>
                   <div class="row box-wrapper">
-                    <h5>m</h5>
-                    <h5>u</h5>
-                    <h5>t</h5>
-                    <h5>a</h5>
-                    <h5>n</h5>
-                    <h5>t</h5>
-                    <h5></h5>
-                    <h5>t</h5>
-                    <h5>y</h5>
-                    <h5>p</h5>
-                    <h5>e</h5>
+                    <h5>mutant type</h5>
                     <input id="TypeMutant" type="checkbox" />
                   </div>
                 </div>
