--- a/src/html/news_scroll.html
+++ b/src/html/news_scroll.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="row navigator">
-        <img src="../../img/STB_logo_white.png" alt="" />
+        <img src="../../img/Model of DeepMatcher - MarkMaker Logo.png" alt="" />
         <div class="title">
           <!-- <h1>Model of DeepMatcher</h1> -->
         </div>
@@ -32,7 +32,8 @@
             <strong>Your browser does not support the video tag.</strong>
           </video>
           <div class="summary-text">
-            <h1>Model of DeepMatcher</h1>
+            <!-- <h1>Model of DeepMatcher</h1> -->
+            <h1><img src="../../img/Model of DeepMatcher - MarkMaker Logo.png" alt="" /></h1>
             <br />
             <br />
             <p>
@@ -48,7 +49,9 @@
               <br />
               <br />
             </p>
-            <h2>DeepMatcher</h2>
+            <!-- <img src="../../img/DeepMatcher_white_logo.png" alt=""> -->
+            <!-- <h2>DeepMatcher</h2> -->
+            <h2><img src="../../img/DeepMatcher_white_logo.png" alt=""></h2>
             <p>
               Syntekabio의 DeepMatcher®는 인공지능 심층 학습법 (AI Deep
               Learning) 기반의 Small molecule screening platform 입니다.
